--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "Bryan Housel <bhousel@gmail.com> (https://github.com/bhousel)",
     "Chak Lung Ngan (https://github.com/tommylung)",
     "Cj Malone (https://github.com/Cj-Malone)",
+    "Colton Piper (https://github.com/ckpiper)",
     "Diego Sangunietti (https://github.com/sguinetti)",
     "doublah (https://github.com/doublah)",
     "ENT8R <info.ent8r@gmail.com> (https://github.com/ENT8R)",
