Add Outlet2048 to contributors list

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "Michael Lyons (https://github.com/michaelblyons)",
     "Minh Nguyễn <mxn@1ec5.org> (https://github.com/1ec5)",
     "nuxper (https://github.com/nuxper)",
+    "Outlet2048 (https://github.com/Outlet2048)",
     "Peter Newman (https://github.com/peternewman)",
     "Praxis Darian <hello@vulpinecat.com> (https://github.com/good-praxis)",
     "Quincy Morgan (https://github.com/quincylvania)",
