--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,41 +1,68 @@
 {
-  "editor.formatOnSave": false,
-  "json.schemas": [
-    {
-        "fileMatch": [
-            "data/**/*.json"
-        ],
-        "url": "./schema/categories.json"
-    },
-    {
-        "fileMatch": [
-            "data/**/*.json"
-        ],
-        "url": "./schema/feature.json"
-    },
-    {
-        "fileMatch": [
-            "config/genericWords.json"
-        ],
-        "url": "./schema/genericWords.json"
-    },
-    {
-        "fileMatch": [
-            "features/**/*.geojson"
-        ],
-        "url": "./schema/geojson.json"
-    },
-    {
-        "fileMatch": [
-            "config/replacements.json"
-        ],
-        "url": "./schema/replacements.json"
-    },
-    {
-        "fileMatch": [
-            "config/trees.json"
-        ],
-        "url": "./schema/trees.json"
-    }
-  ]
+    "editor.formatOnSave": false,
+    "json.schemas": [
+        {
+            "fileMatch": [
+                "data/**/*.json"
+            ],
+            "url": "./schema/categories.json"
+        },
+        {
+            "fileMatch": [
+                "data/**/*.json"
+            ],
+            "url": "./schema/feature.json"
+        },
+        {
+            "fileMatch": [
+                "config/genericWords.json"
+            ],
+            "url": "./schema/genericWords.json"
+        },
+        {
+            "fileMatch": [
+                "features/**/*.geojson"
+            ],
+            "url": "./schema/geojson.json"
+        },
+        {
+            "fileMatch": [
+                "config/replacements.json"
+            ],
+            "url": "./schema/replacements.json"
+        },
+        {
+            "fileMatch": [
+                "config/trees.json"
+            ],
+            "url": "./schema/trees.json"
+        }
+    ],
+    "cSpell.words": [
+        "aitodotai",
+        "Applebees",
+        "brandkey",
+        "fontawesome",
+        "fortawesome",
+        "honeybakedham",
+        "ideditor",
+        "idgen",
+        "Kebabai",
+        "mapbox",
+        "Multipolygon",
+        "multivalue",
+        "newid",
+        "nsimple",
+        "openstreetmap",
+        "operatorkey",
+        "osmkey",
+        "rapideditor",
+        "regexes",
+        "sparql",
+        "Taginfo",
+        "tagpair",
+        "wikibase",
+        "wiphala",
+        "xmlbuilder"
+    ]
 }
