--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   "extends": [
     "eslint:recommended"
   ],
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module"
