--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "build:features": "node scripts/build_features.js",
     "build:index": "node scripts/build_index.js",
     "tap": "c8 tap --reporter terse --no-cov tests/*.js",
-    "lint": "eslint scripts/*.js lib/*.js",
+    "lint": "eslint scripts/*.js lib/*.js tests/*.js",
     "test": "run-s build tap",
     "validate": "node scripts/validate.js",
     "wikidata": "node scripts/build_wikidata.js"
@@ -105,7 +105,10 @@
     "which-polygon": "^2.2.1"
   },
   "devDependencies": {
-    "@aitodotai/json-stringify-pretty-compact": "^1.3.0",
+    "json-stringify-pretty-compact": "^4.0.0",
+    "@babel/core": "^7.23.2",
+    "@babel/eslint-parser": "^7.22.15",
+    "@babel/plugin-syntax-import-attributes": "^7.22.5",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
@@ -119,7 +122,7 @@
     "chalk": "5.3.0",
     "clear": "^0.1.0",
     "esbuild": "^0.19.4",
-    "eslint": "^8.50.0",
+    "eslint": "^8.52.0",
     "fs-extra": "^11.1.1",
     "geojson-bounds": "^1.0.2",
     "geojson-precision": "^1.0.0",
