Add AntiCompositeNumber to contributors list

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "Adamant36 (https://github.com/Adamant36)",
     "afanasovich (https://github.com/afanasovich)",
     "Andrew Harvey <andrew@alantgeo.com.au> (https://github.com/andrewharvey)",
+    "AntiCompositeNumber <AntiCompositeNumber@gmail.com> (https://github.com/AntiCompositeNumber)",
     "archpdx <archpdx@pm.me> (https://github.com/arch0345)",
     "ArenaL5 (https://github.com/ArenaL5)",
     "arrival-spring (https://github.com/arrival-spring)",
