--- a/data/brands/shop/appliance.json
+++ b/data/brands/shop/appliance.json
@@ -38,8 +38,8 @@
     },
     {
       "displayName": "Gollo",
-      "id": "gollo-ff6287",
-      "locationSet": {"include": ["001"]},
+      "id": "gollo-a110c3",
+      "locationSet": {"include": ["cr"]},
       "tags": {
         "brand": "Gollo",
         "name": "Gollo",
