Remove json schemas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,35 +1,3 @@
 {
-  "editor.formatOnSave": false,
-  "json.schemas": [
-    {
-        "fileMatch": [
-            "data/**/*.json"
-        ],
-        "url": "./schema/categories.json"
-    },
-    {
-        "fileMatch": [
-            "config/genericWords.json"
-        ],
-        "url": "./schema/genericWords.json"
-    },
-    {
-        "fileMatch": [
-            "features/**/*.geojson"
-        ],
-        "url": "./schema/geojson.json"
-    },
-    {
-        "fileMatch": [
-            "config/replacements.json"
-        ],
-        "url": "./schema/replacements.json"
-    },
-    {
-        "fileMatch": [
-            "config/trees.json"
-        ],
-        "url": "./schema/trees.json"
-    }
-  ]
+  "editor.formatOnSave": false
 }
