--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "serhii-muchychka <Serhii.Muchychka@gmail.com> (https://github.com/serhii-muchychka)",
     "sinclarius (https://github.com/sinclarius)",
     "Sky (https://github.com/Dimitar5555)",
+    "Snowysauce (https://github.com/Snowysauce)",
     "Tim Smith <tsmith@mondoo.com> (https://github.com/tas50)",
     "tohaklim (https://github.com/tohaklim)",
     "UKChris-osm (https://github.com/UKChris-osm)",
