--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18, 20]
+        node-version: ['^18.20', '^20.10']
 
     steps:
     - uses: actions/checkout@v4
